--- a/debian-packaging/myjenkins/SOURCES/changelog
+++ b/debian-packaging/myjenkins/SOURCES/changelog
@@ -1,4 +1,4 @@
-@@JENKINS_APP@@ (1.0.0) UNRELEASED; urgency=low
+@@APP_NAME@@ (1.0.0) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
 
