change version to follow jenkins version

--- a/debian-packaging/myjenkins/SOURCES/changelog
+++ b/debian-packaging/myjenkins/SOURCES/changelog
@@ -1,4 +1,4 @@
-@@APP_NAME@@ (1.0.0) UNRELEASED; urgency=low
+@@APP_NAME@@ (@@APP_VERSION@@) UNRELEASED; urgency=low
 
   * Initial release. (Closes: #XXXXXX)
 
